--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -7,15 +7,15 @@ body {
 }
 
 header {
-  background-color: #333;
-  padding: 1em;
+  background-color: #222;
+  padding: 1em 0;
   position: fixed;
-  width: calc(100% - 2em); /* Adjust width to account for body padding */
+  width: 100%;
   top: 0;
   left: 0;
   z-index: 1000;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
@@ -23,7 +23,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: calc(100% - 2em);
+  max-width: 760px;
 }
 
 .logo {
@@ -33,6 +34,7 @@ nav {
 
 .menu a {
   margin: 0 1em;
+  padding: 0.5em;
   text-decoration: none;
   color: #ddd;
 }
@@ -53,14 +55,15 @@ nav {
 .gallery-container {
   display: flex;
   justify-content: center;
-  padding: 5em 0; /* Adjust padding to account for header */
+  padding: 5em 0;
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(5, 152px); /* 5 columns with fixed width */
+  grid-template-columns: repeat(5, 152px);
   gap: 10px;
   justify-content: center;
+  max-width: 760px;
 }
 
 .thumbnail-wrapper {
@@ -73,7 +76,6 @@ nav {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 5px;
   transition: transform 0.2s;
   cursor: pointer;
 }
@@ -106,30 +108,37 @@ nav {
   cursor: pointer;
 }
 
-.carousel-container {
-  width: 90%;
-  max-width: 1200px;
-  margin: auto;
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  background: none;
+  border: none;
+  font-size: 2em;
+  color: #ddd;
+  cursor: pointer;
+  transform: translateY(-50%);
 }
 
-.carousel-item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.prev {
+  left: 20px;
+}
+
+.next {
+  right: 20px;
 }
 
 .carousel-image-wrapper {
-  width: 100%;
-  height: 100%;
+  max-width: 90%;
+  max-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.carousel-image {
-  max-width: 100%;
-  max-height: 80vh;
-  object-fit: contain;
+.carousel-image img {
+  width: auto !important;
+  height: 100% !important;
+  object-fit: contain !important;
 }
 
 @media (max-width: 768px) {
@@ -157,6 +166,7 @@ nav {
   }
 
   .gallery {
-    grid-template-columns: repeat(auto-fit, minmax(152px, 1fr)); /* Adjust for mobile */
+    grid-template-columns: repeat(auto-fit, minmax(152px, 1fr));
+    max-width: 100%;
   }
 }
