--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -28,8 +28,10 @@ nav {
 }
 
 .logo {
+  font-family: "Bona Nova SC", serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 1.5em;
-  font-weight: bold;
 }
 
 .menu a {
@@ -56,6 +58,7 @@ nav {
   display: flex;
   justify-content: center;
   padding: 5em 0;
+  border: 1em solid grey;
 }
 
 .gallery {
