--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -148,13 +148,24 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden; /* Ensure that overflow is hidden */
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .carousel-image img {
   width: auto !important;
   height: 100% !important;
+  max-height: 100%; /* Ensure the image doesn't exceed container height */
   object-fit: contain !important;
 }
+
 
 @media (max-width: 768px) {
   .menu {
